Support application/graphql for request body
Closes gh-948